--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 未知国家-1.22MB/s(Youtube:不良林), server: 193.178.210.29, port: 443, type: trojan, password: iKR3Ft, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-320.3KB/s(Youtube:不良林), server: 213.183.59.177, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林), server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇬🇧 英国-455.1KB/s(Youtube:不良林), server: 172.99.190.39, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-365.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇯🇵 日本-1.12MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-474.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-363.7KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-478.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-778.1KB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-924.0KB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇳 中国-1.49MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-550.5KB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇳🇱 荷兰-295.9KB/s(Youtube:不良林), server: 213.183.59.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 未知国家-1.50MB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
+  - {name: 未知国家-1.26MB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 00b19c02-bc00-440a-a397-faf70ac3f44e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
+  - {name: 🇨🇳 中国-567.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-549.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-320.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-455.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-778.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-550.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-295.9KB/s(Youtube:不良林)
+      - 未知国家-1.50MB/s(Youtube:不良林)
+      - 未知国家-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-549.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 未知国家-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-320.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-455.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-778.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-550.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-295.9KB/s(Youtube:不良林)
+      - 未知国家-1.50MB/s(Youtube:不良林)
+      - 未知国家-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-549.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-320.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-455.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-778.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-550.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-295.9KB/s(Youtube:不良林)
+      - 未知国家-1.50MB/s(Youtube:不良林)
+      - 未知国家-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-549.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 未知国家-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-320.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-455.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-778.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-550.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-295.9KB/s(Youtube:不良林)
+      - 未知国家-1.50MB/s(Youtube:不良林)
+      - 未知国家-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-549.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 未知国家-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-320.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-455.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-778.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-550.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-295.9KB/s(Youtube:不良林)
+      - 未知国家-1.50MB/s(Youtube:不良林)
+      - 未知国家-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-549.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-320.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-455.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-778.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-550.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-295.9KB/s(Youtube:不良林)
+      - 未知国家-1.50MB/s(Youtube:不良林)
+      - 未知国家-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-549.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-320.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
-      - 🇬🇧 英国-455.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-778.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-550.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-295.9KB/s(Youtube:不良林)
+      - 未知国家-1.50MB/s(Youtube:不良林)
+      - 未知国家-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-549.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
