--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-304.5KB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
   - {name: 🇨🇳 中国-845.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: v1.tgfaka.com, port: 8443, type: vmess, uuid: 00b19c02-bc00-440a-a397-faf70ac3f44e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.tgfaka.com}}
-  - {name: 未知国家-1.50MB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
-  - {name: 🇨🇳 中国-321.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-977.5KB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-333.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-340.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-924.0KB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 未知国家-2.36MB/s(Youtube:不良林), server: v1.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.tgfaka.com}}
   - {name: 🇨🇳 中国-639.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-366.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-333.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-309.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-845.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 未知国家-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-977.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-333.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.0KB/s(Youtube:不良林)
+      - 未知国家-2.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-845.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 未知国家-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-977.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-333.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.0KB/s(Youtube:不良林)
+      - 未知国家-2.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-845.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 未知国家-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-977.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-333.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.0KB/s(Youtube:不良林)
+      - 未知国家-2.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-845.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 未知国家-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-977.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-333.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.0KB/s(Youtube:不良林)
+      - 未知国家-2.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-845.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 未知国家-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-977.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-333.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.0KB/s(Youtube:不良林)
+      - 未知国家-2.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-845.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 未知国家-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-977.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-333.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.0KB/s(Youtube:不良林)
+      - 未知国家-2.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-845.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 未知国家-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-977.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-333.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-924.0KB/s(Youtube:不良林)
+      - 未知国家-2.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-366.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
