--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-323.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-186.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-787.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-639.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-477.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-474.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-371.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇨🇦 加拿大-2.39MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-481.8KB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 00b19c02-bc00-440a-a397-faf70ac3f44e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
+  - {name: 🇨🇳 中国-1.51MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-362.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-698.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-309.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 捷克-1.48MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇸🇬 新加坡-501.9KB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇬🇧 英国-487.7KB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-787.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-481.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-698.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
+      - 捷克-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-501.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-787.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-481.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-698.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
+      - 捷克-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-501.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-787.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-481.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-698.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
+      - 捷克-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-501.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-787.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-481.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-698.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
+      - 捷克-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-501.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-787.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-481.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-698.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
+      - 捷克-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-501.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-787.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-481.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-698.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
+      - 捷克-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-501.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-787.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-481.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-698.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
+      - 捷克-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-501.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
